--- a/themes/book/layouts/partials/docs/inject/content-after.html
+++ b/themes/book/layouts/partials/docs/inject/content-after.html
@@ -2,5 +2,5 @@
     {{ $edit_url := print "/admin/#/edit/" .RelPermalink }}
 
     <p><a href="{{$edit_url}}" class="book-btn">Edit this page</a>&nbsp;&nbsp;
-    <a href="/admin/#/collections/docs" class="book-btn">Add a New Page</a></p>
+    <a href="/admin/#/collections/docs/new" class="book-btn">Add a New Page</a></p>
 {{ end }}
